--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../bower_components/select2/select2.css">
     <link rel="stylesheet" href="../css/select2-bootstrap.css">
     <link rel="stylesheet" href="../css/custom.css">
+    <link rel="stylesheet" href="../config/config.css">
 
     <link rel="stylesheet" href="http://css-spinners.com/css/spinner/spinner.css" type="text/css">
 
@@ -52,6 +53,8 @@
 <script type="text/javascript" src="../bower_components/select2/select2.min.js"></script>
 <script type="text/javascript" src="../bower_components/angular-select2/dist/angular-select2.min.js"></script>
 <script type="text/javascript" src="../bower_components/angular-elastic/elastic.js"></script>
+<script type="text/javascript" src="../bower_components/wysihtml/dist/wysihtml5x-toolbar.min.js"></script>
+<script type="text/javascript" src="../bower_components/wysihtml/parser_rules/advanced_and_extended.js"></script>
 <script type="text/javascript" src="../js/achilles.js"></script>
 <script type="text/javascript" src="../js/controllers/main.controller.js"></script>
 <script type="text/javascript" src="../js/controllers/modal.controllers.js"></script>
