--- a/html/index.html
+++ b/html/index.html
@@ -39,7 +39,7 @@
 </div>
 <div class="container-fluid" ng-controller="MainController as vm">
     <div class="toolbar-wrapper" ng-show="vm.treatments.length">
-        <div class="toolbar" ng-cloak>
+        <div class="toolbar" treatment-toolbar ng-cloak>
             <div class="row">
                 <div class="col-xs-4">
                     <p ng-show="vm.treatments.length">Behandlungseinträge</p>
@@ -48,8 +48,6 @@
                     <p ng-show="vm.treatments.length">{{vm.treatments.length}} von {{vm.treatments.length}}</p>
                 </div>
                 <div class="col-xs-6">
-
-
                     <div class="btn-toolbar pull-right">
                         <div class="dropdown icon-dropdown" toggle-focus dropdown>
 
@@ -60,13 +58,15 @@
                                    ng-click="vm.addTreatment(vm.treatments)">&nbsp;</a>
                                 <a class="btn btn-default btn-xs new-treatment-dialog" href="{{vm.baseUrl}}treatment/">
                                     &nbsp;</a>
-                                <a class="btn btn-default btn-xs biometric-report">&nbsp;</a>
-                                <a class="btn btn-default btn-xs laboratory-report">&nbsp;</a>
-                                <a class="btn btn-default btn-xs treatment-report">&nbsp;</a>
+                                <a class="btn btn-default btn-xs biometric-report"
+                                   ng-click="dc.openBiometricReport(vm.process)">&nbsp;</a>
+                                <a class="btn btn-default btn-xs laboratory-report"
+                                   ng-click="dc.openLaboratoryReport(vm.process)">&nbsp;</a>
+                                <a class="btn btn-default btn-xs treatment-report"
+                                   ng-click="dc.openTreatmentReport(vm.process, vm.treatments)">&nbsp;</a>
                                 <a class="btn btn-default btn-xs search">&nbsp;</a>
                                 <a class="btn btn-default btn-xs sort">&nbsp;</a>
                             </div>
-
 
                             <div class="btn-group">
                                 <a class="btn btn-default btn-xs appointment" href="{{vm.baseUrl}}appointment/">
@@ -116,6 +116,7 @@
 <script type="text/javascript" src="../js/directives/treatment.directives.js"></script>
 <script type="text/javascript" src="../js/directives/modal.directives.js"></script>
 <script type="text/javascript" src="../js/directives/toggle-focus.directive.js"></script>
+<script type="text/javascript" src="../js/directives/treatment-toolbar.directive.js"></script>
 <script type="text/javascript" src="../js/services/url.service.js"></script>
 <script type="text/javascript" src="../js/services/entry-type.service.js"></script>
 <script type="text/javascript" src="../js/services/treatment-context.service.js"></script>
