--- a/dev/index.html
+++ b/dev/index.html
@@ -86,6 +86,7 @@
 <script type="text/javascript" src="../js/directives/title-settings-widget.directive.js"></script>
 <script type="text/javascript" src="../js/directives/draggable.directive.js"></script>
 <script type="text/javascript" src="../js/directives/textblock-widget.directive.js"></script>
+<script type="text/javascript" src="../js/directives/type-and-preset.directive.js"></script>
 
 <script type="text/javascript" src="../js/services/url.service.js"></script>
 <script type="text/javascript" src="../js/services/entry-type.service.js"></script>
@@ -102,6 +103,8 @@
 <script type="text/javascript" src="../js/services/treatment-permission.service.js"></script>
 <script type="text/javascript" src="../js/services/widget-visibility.service.js"></script>
 <script type="text/javascript" src="../js/services/textblock.service.js"></script>
+<script type="text/javascript" src="../js/services/textblock-widget.service.js"></script>
+<script type="text/javascript" src="../js/services/preset.service.js"></script>
 
 <script type="text/javascript" src="../js/config/spinner.config.js"></script>
 <script type="text/javascript" src="../js/config/textAngular.config.js"></script>
