--- a/dev/index.html
+++ b/dev/index.html
@@ -39,10 +39,16 @@
 
     <title-settings-widget></title-settings-widget>
 
+    <advanced-search-widget search="vm.search"></advanced-search-widget>
+
     <text-block-widget></text-block-widget>
 
     <treatment treatment="treatment" editable="{{$index<5}}"
-               ng-repeat="treatment in vm.treatments | filter:vm.search | orderBy:[(vm.reverse?'':'-')+'date', 'id']"
+               ng-repeat="treatment in vm.treatments |
+                            filter:vm.search.text |
+                            compareDate:vm.search.dateFrom:'after' |
+                            compareDate:vm.search.dateTo:'before' |
+                            orderBy:[(vm.reverse?'':'-')+'date', 'id']"
                treatmentlist="vm.treatments" user="vm.user"></treatment>
 </div>
 
@@ -76,6 +82,7 @@
 <script type="text/javascript" src="../js/controllers/main.controller.js"></script>
 <script type="text/javascript" src="../js/controllers/modal.controllers.js"></script>
 
+<script type="text/javascript" src="../js/directives/advanced-search-widget.directive.js"></script>
 <script type="text/javascript" src="../js/directives/treatment.directive.js"></script>
 <script type="text/javascript" src="../js/directives/treatment-entry.directive.js"></script>
 <script type="text/javascript" src="../js/directives/treatment-row.directive.js"></script>
@@ -89,6 +96,7 @@
 <script type="text/javascript" src="../js/directives/type-and-preset.directive.js"></script>
 <script type="text/javascript" src="../js/directives/keyboard-focus.directive.js"></script>
 
+<script type="text/javascript" src="../js/services/advanced-search-widget.service.js"></script>
 <script type="text/javascript" src="../js/services/asterisk-search.service.js"></script>
 <script type="text/javascript" src="../js/services/biometric.service.js"></script>
 <script type="text/javascript" src="../js/services/catalog-entry.service.js"></script>
@@ -110,6 +118,8 @@
 <script type="text/javascript" src="../js/services/url.service.js"></script>
 <script type="text/javascript" src="../js/services/user.service.js"></script>
 <script type="text/javascript" src="../js/services/widget-visibility.service.js"></script>
+
+<script type="text/javascript" src="../js/filters/compareDate.filter.js"></script>
 
 <script type="text/javascript" src="../js/config/spinner.config.js"></script>
 <script type="text/javascript" src="../js/config/textAngular.config.js"></script>
