--- a/dev/index.html
+++ b/dev/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../css/custom.css">
     <link rel="stylesheet" href="../config/config.css">
     <link rel="stylesheet" href="../bower_components/css-spinners/css/spinner/spinner.css" type="text/css">
+    <link rel="stylesheet" href="../bower_components/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css" type="text/css">
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -48,6 +49,7 @@
                             filter:vm.search.text |
                             compareDate:vm.search.dateFrom:'after' |
                             compareDate:vm.search.dateTo:'before' |
+                            attachments:vm.search.attachments |
                             orderBy:[(vm.reverse?'':'-')+'date', 'id']"
                treatmentlist="vm.treatments" user="vm.user"></treatment>
 </div>
@@ -120,6 +122,7 @@
 <script type="text/javascript" src="../js/services/widget-visibility.service.js"></script>
 
 <script type="text/javascript" src="../js/filters/compareDate.filter.js"></script>
+<script type="text/javascript" src="../js/filters/attachments.filter.js"></script>
 
 <script type="text/javascript" src="../js/config/spinner.config.js"></script>
 <script type="text/javascript" src="../js/config/textAngular.config.js"></script>
