--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../css/custom.css">
     <link rel="stylesheet" href="../config/config.css">
     <link rel="stylesheet" href="../bower_components/css-spinners/css/spinner/spinner.css" type="text/css">
+    <link rel="stylesheet" href="../bower_components/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css" type="text/css">
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
