--- a/dev/index.html
+++ b/dev/index.html
@@ -44,6 +44,8 @@
 
     <text-block-widget></text-block-widget>
 
+    <preset-widget></preset-widget>
+
     <treatment treatment="treatment" editable="{{$index<5}}"
                ng-repeat="treatment in vm.treatments |
                             filter:vm.search.text |
@@ -97,6 +99,7 @@
 <script type="text/javascript" src="../js/directives/textblock-widget.directive.js"></script>
 <script type="text/javascript" src="../js/directives/type-and-preset.directive.js"></script>
 <script type="text/javascript" src="../js/directives/keyboard-focus.directive.js"></script>
+<script type="text/javascript" src="../js/directives/preset-widget.directive.js"></script>
 
 <script type="text/javascript" src="../js/services/advanced-search-widget.service.js"></script>
 <script type="text/javascript" src="../js/services/asterisk-search.service.js"></script>
@@ -120,6 +123,7 @@
 <script type="text/javascript" src="../js/services/url.service.js"></script>
 <script type="text/javascript" src="../js/services/user.service.js"></script>
 <script type="text/javascript" src="../js/services/widget-visibility.service.js"></script>
+<script type="text/javascript" src="../js/services/preset-widget.service.js"></script>
 
 <script type="text/javascript" src="../js/filters/compareDate.filter.js"></script>
 <script type="text/javascript" src="../js/filters/attachments.filter.js"></script>
